[package]
name = "spaik"
version = "0.2.2"
authors = ["Jonas Møller <jonas@nimda.no>"]
description = "The SPAIK Programming Language"
readme = "doc/README.md"
edition = "2021"
repository = "https://github.com/snyball/spaik"
homepage = "https://github.com/snyball/spaik"
license = "BSD-2-Clause"
default-run = "repl"

[profile.release]
panic = "abort"
lto = "fat"

[features]
default = ["repl", "lisp-test", "math", "readline"]
repl = ["colored", "comfy-table", "dirs"]
readline = ["rustyline"]
lisp-test = ["colored"]
wasm = ["wasm-bindgen"]
math = ["glam"]

[dependencies]
lazy_static = "1.4"
fnv = "1.0"
log = "0.4"
spaik-proc-macros = { path = 'proc-macros' }
bincode = "1.3.3"
serde = { version = "1.0.143", features = ["derive"] }
convert_case = "0.6.0"
comfy-table = { version = "5.0.0", optional = true, default-features = false, features = [] }
dirs = { version = "4.0.0", optional = true }
rustyline = { version = "6.2", optional = true }
colored = { version = "2.0", optional = true }
glam = { version = "0.21.3", optional = true, features = ["mint", "serde"] }

[dev-dependencies]
pretty_env_logger = "0.4.0"

[build-dependencies]
wasm-bindgen = { version = "0.2.79", optional = true }

[lib]
name = "spaik"
doctest = false
path = "src/lib.rs"

[[bin]]
name = "repl"
path = "src/bin/readline-repl.rs"
required-features = ["repl", "readline"]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lisp-test"
path = "src/lisp_test.rs"
required-features = ["lisp-test"]

[[bin]]
name = "scratch"
path = "src/bin/scratch.rs"

[[bin]]
name = "wasm-repl"
path = "src/bin/wasm-repl.rs"
required-features = ["repl", "wasm"]
