[package]
name = "spaik"
version = "0.2.2"
authors = ["Jonas Møller <jonas@nimda.no>"]
description = "The SPAIK Programming Language"
readme = "doc/README.md"
edition = "2021"
repository = "https://github.com/snyball/spaik"
homepage = "https://github.com/snyball/spaik"
license = "BSD-2-Clause"
default-run = "repl"
rust-version = "1.65"

[profile.release]
panic = "abort"

[profile.wasm]
inherits = "release"
panic = "abort"
lto = "fat"
opt-level = "s"

[features]
default = ["math", "extra", "readline", "derive", "modules"]
extra = ["comfy-table", "owo-colors"]
readline = ["rustyline", "dirs"]
wasm = ["wasm-bindgen"]
math = ["glam"]
modules = ["bincode"]
derive = ["spaik-proc-macros"]

[dependencies]
lazy_static = "1.4"
fnv = "1.0"
log = "0.4"
convert_case = "0.6.0"
num-traits = "0.2.15"
serde = { version = "1.0.143", features = ["derive"] }

spaik-proc-macros = { path = 'proc-macros', optional = true }
bincode = { version = "1.3.3", optional = true }
comfy-table = { version = "5.0.0", optional = true, default-features = false, features = [] }
dirs = { version = "4.0.0", optional = true }
rustyline = { version = "6.2", optional = true }
glam = { version = "0.21.3", optional = true, features = ["mint", "serde"] }
owo-colors = { version = "3.5.0", optional = true, features = ["supports-colors"] }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3.2"

[dev-dependencies]
pretty_env_logger = "0.4"

[build-dependencies]
wasm-bindgen = { version = "0.2.79", optional = true }

[lib]
name = "spaik"
doctest = false
path = "src/lib.rs"

[[bin]]
name = "repl"
path = "src/bin/readline-repl.rs"
required-features = ["readline"]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lisp-test"
path = "src/bin/run-lisp-tests.rs"

[[bin]]
name = "scratch"
path = "src/bin/scratch.rs"

[[bin]]
name = "wasm-repl"
path = "src/bin/wasm-repl.rs"
required-features = ["wasm"]
