[package]
name = "spaik"
version = "0.4.0-alpha"
authors = ["Jonas Møller <jonas@nimda.no>"]
description = "The SPAIK Programming Language"
edition = "2021"
repository = "https://github.com/snyball/spaik"
homepage = "https://github.com/snyball/spaik"
license = "BSD-2-Clause"
default-run = "repl"
rust-version = "1.75"

[profile.release]
panic = "abort"
codegen-units = 1
debug = 2
lto = "fat"

[profile.wasm]
debug = 0
inherits = "release"
panic = "abort"
lto = "fat"
opt-level = "z"
codegen-units = 1

[features]
default = ["math", "extra", "readline", "derive", "modules", "freeze", "pretty_env_logger"]
extra = ["comfy-table", "owo-colors"]
readline = ["rustyline", "dirs"]
wasm = ["wasm-bindgen"]
math = ["glam", "mint"]
modules = ["bincode", "serde"]
derive = ["spaik-proc-macros"]
freeze = ["bincode", "serde"]
no-threading = []
serde = ["dep:serde"]
shipyard = ["dep:shipyard"]
cleanup-vtables = []
rapier2d = ["dep:rapier2d"]

[dependencies]
log = "0.4"
ahash = "0.8"
serde = { version = "1.0.143", features = ["derive"], optional = true }

spaik-proc-macros = { path = "proc-macros", optional = true }
#spaik-proc-macros = { version = "0.5.1", optional = true }
bincode = { version = "1.3.3", optional = true }
comfy-table = { version = "5.0.0", optional = true, default-features = false, features = [] }
dirs = { version = "4.0.0", optional = true }
rustyline = { version = "6.2", optional = true }
glam = { version = "0.29", features = ["mint", "serde"], optional = true }
owo-colors = { version = "3.5.0", optional = true, features = ["supports-colors"] }
mint = { version = "0.5.9", optional = true }
sptr = "0.3.2"
shipyard = { version = "0.6.2", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
rapier2d = { version = "0.18.0", optional = true }

[dev-dependencies]
iai = { version = "0.1.1", features = ["macro"] }
pretty_env_logger = "0.5.0"

[build-dependencies]
wasm-bindgen = { version = "0.2.79", optional = true }

[lib]
name = "spaik"
path = "src/lib.rs"

[[bin]]
name = "repl"
path = "src/bin/readline-repl.rs"
required-features = ["readline", "pretty_env_logger"]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lisp-test"
path = "src/bin/run-lisp-tests.rs"

[[bin]]
name = "scratch"
path = "src/bin/scratch.rs"

[[bench]]
name = "lisp_test"
harness = false

[[bench]]
name = "sieve"
harness = false
