[package]
name = "spaik-proc-macros"
version = "0.1.0"
authors = ["Jonas Møller <jonas@nimda.no>"]
edition = "2021"
description = "Procedural macros for SPAIK"
license = "BSD-2-Clause"

[lib]
name = "spaik_proc_macros"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro-crate = "1.1.3"
convert_case = "0.6.0"
